[package]
name = "last_todos"
version = "0.1.0"
authors = ["Ian Aranza <ian.aranza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rev_lines = "0.2.1"
